--- a/main.html
+++ b/main.html
@@ -22,6 +22,39 @@
           </div>
           <button class="btn rounded-md">Logout</button>
         </nav>
+        <section class="mt-10">
+          <h1 class="text-2xl font-bold mb-2">🔥 Welcome to Payooo!</h1>
+          <p>
+            Enjoy easy and convenient financial services with us. <br />
+            Cashout charge is low and
+          </p>
+          <div class="cards cursor-pointer grid grid-cols-3 mt-14 gap-2 p-2">
+            <div class="box border p-4 text-center rounded-lg">
+              <img class="w-8 mx-auto" src="./assets/wallet1.png" alt="" />
+              <h3>Add Money</h3>
+            </div>
+            <div class="box border p-4 text-center rounded-sm">
+              <img class="w-8 mx-auto" src="./assets/send1.png" alt="" />
+              <h3>Cash out</h3>
+            </div>
+            <div class="box border p-4 text-center rounded-sm">
+              <img class="w-8 mx-auto" src="./assets/purse1.png" alt="" />
+              <h3>Pay Bill</h3>
+            </div>
+            <div class="box border p-4 text-center rounded-sm">
+              <img class="w-8 mx-auto" src="./assets/money1.png" alt="" />
+              <h3>Transfer Money</h3>
+            </div>
+            <div class="box border p-4 text-center rounded-sm">
+              <img class="w-8 mx-auto" src="./assets/bonus1.png" alt="" />
+              <h3>Get Bonus</h3>
+            </div>
+            <div class="box border p-4 text-center rounded-sm">
+              <img class="w-8 mx-auto" src="./assets/transaction1.png" alt="" />
+              <h3>Transactions</h3>
+            </div>
+          </div>
+        </section>
       </header>
     </section>
   </body>
