--- a/main.html
+++ b/main.html
@@ -31,11 +31,17 @@
             Cashout charge is low and
           </p>
           <div class="cards cursor-pointer grid grid-cols-3 mt-14 gap-2 p-2">
-            <div class="box border p-4 text-center rounded-lg">
+            <div
+              id="add-money-card"
+              class="box border p-4 text-center rounded-lg"
+            >
               <img class="w-8 mx-auto" src="./assets/wallet1.png" alt="" />
               <h3>Add Money</h3>
             </div>
-            <div class="box border p-4 text-center rounded-sm">
+            <div
+              id="cash-out-card"
+              class="box border p-4 text-center rounded-sm"
+            >
               <img class="w-8 mx-auto" src="./assets/send1.png" alt="" />
               <h3>Cash out</h3>
             </div>
@@ -56,7 +62,8 @@
               <h3>Transactions</h3>
             </div>
           </div>
-          <section>
+          <section id="add-money">
+            <h2>Add money</h2>
             <div class="">
               <div class="hero-content flex-col lg:flex-row-reverse">
                 <div class="card w-full max-w-sm shrink-0 shadow-2xl">
@@ -97,7 +104,7 @@
 
                       <div><a class="link link-hover">Forgot password?</a></div>
                       <button
-                        id="add-money"
+                        id="btn-add-money"
                         class="btn btn-neutral border-none bg-blue-700 mt-4"
                       >
                         Add Money
@@ -108,9 +115,51 @@
               </div>
             </div>
           </section>
+
+          <section id="cash-out">
+            <h2>Cash out</h2>
+            <div>
+              <fieldset class="fieldset">
+                <label class="fieldset-label">Account Number</label>
+                <input
+                  id="Account-Number"
+                  type="number"
+                  class="input"
+                  placeholder="Ac Number"
+                  required
+                />
+                <label class="fieldset-label">Amount</label>
+                <input
+                  id="cashout-amount"
+                  type="number"
+                  class="input"
+                  placeholder="Enter Amount"
+                  required
+                />
+                <label class="fieldset-label">PIN</label>
+                <input
+                  id="cashout-pin"
+                  type="text"
+                  class="input"
+                  placeholder="Enter PIN"
+                  required
+                />
+
+                <div><a class="link link-hover">Forgot password?</a></div>
+                <button
+                  id="cash-out-btn"
+                  class="btn btn-neutral border-none bg-blue-700 mt-4"
+                >
+                  Cash Out
+                </button>
+              </fieldset>
+            </div>
+          </section>
         </section>
       </header>
     </section>
     <script src="./js/addMoney.js"></script>
+    <script src="./js/toggle.js"></script>
+    <script src="./js/cashout.js"></script>
   </body>
 </html>
