done cashout functionality

--- a/main.html
+++ b/main.html
@@ -158,8 +158,12 @@
         </section>
       </header>
     </section>
-    <script src="./js/addMoney.js"></script>
-    <script src="./js/toggle.js"></script>
-    <script src="./js/cashout.js"></script>
+    <script src="./utilities/utilities.js"></script>
+    <script src="./js/add-money.js"></script>
+    <script src="./utilities/tog-gle.js"></script>
+    <script src="./js/cash-out.js"></script>
+    <!-- <script src="./js/addMoney.js"></script> -->
+    <!-- <script src="./js/toggle.js"></script>
+    <script src="./js/cashout.js"></script> -->
   </body>
 </html>
