add transaction functionality

--- a/main.html
+++ b/main.html
@@ -57,7 +57,10 @@
               <img class="w-8 mx-auto" src="./assets/bonus1.png" alt="" />
               <h3>Get Bonus</h3>
             </div>
-            <div class="box border p-4 text-center rounded-sm">
+            <div
+              id="transaction-card"
+              class="box border p-4 text-center rounded-sm"
+            >
               <img class="w-8 mx-auto" src="./assets/transaction1.png" alt="" />
               <h3>Transactions</h3>
             </div>
@@ -155,6 +158,12 @@
               </fieldset>
             </div>
           </section>
+          <section id="transantion-history">
+            <h1 class="text-3xl font-bold text-red-400 text-center p-3">
+              Transaction History
+            </h1>
+            <div id="transaction-container"></div>
+          </section>
         </section>
       </header>
     </section>
@@ -162,6 +171,7 @@
     <script src="./js/add-money.js"></script>
     <script src="./utilities/tog-gle.js"></script>
     <script src="./js/cash-out.js"></script>
+    <script src="./js/transactionHistory.js"></script>
     <!-- <script src="./js/addMoney.js"></script> -->
     <!-- <script src="./js/toggle.js"></script>
     <script src="./js/cashout.js"></script> -->
