--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
                 <div class="card w-full max-w-sm shrink-0 shadow-2xl">
                   <div class="card-body">
                     <legend>Add Money</legend>
-                    <select class="select">
+                    <select id="allbank" class="select">
                       <option disabled selected>Select Bank</option>
                       <option value="Bkash">Bkash</option>
                       <option value="Nagad">Nagad</option>
